# sil-kit-adapters-vcan

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md
.devcontainer/: Dockerfile
.github/: pull_request_template.md
.github/actions/build-cmake-preset/: action.yml
.github/workflows/: build-linux-release.yml  trigger-adapters-ci.yaml  trigger-pkg-workflow.yaml  trigger-ska-integration-tests.yaml  trigger-ska-quality-checks.yaml  trigger-testing-workflow-on-testing-repo.yaml
QEMU/: README.md
SocketCAN/: README.md
SocketCAN/Utility/: AdapterUtils.hpp  CMakeLists.txt  Exceptions.hpp  SignalHandler.hpp
SocketCAN/adapter/: AdapterConnections.cpp  AdapterConnections.hpp  AdapterUtils.hpp  CMakeLists.txt  ConnectionsImplementations.cpp  ConnectionsImplementations.hpp  Parsing.cpp  Parsing.hpp  SilKitAdapterSocketCAN.cpp  SilKitAdapterSocketCAN.hpp
SocketCAN/demos/: CANoe_SILKit_config.silkit.yaml  CMakeLists.txt  SilKitConfig_Adapter.silkit.yaml
SocketCAN/demos/CANoe/: CANcontrol_device.can  CANoe_SILKit_config.silkit.yaml  CANoe_vCAN_configuration.cfg  CANoe_vcan_configuration.cfg  CanDemoPanel.xvp  Configuration_vcan.cfg  Configuration_vcan.stcfg
SocketCAN/demos/CANoe4SW_SE/: createEnvForLinux.ps1  createEnvironment.sh  run.ps1  run.sh  run_all.sh  venvironment.yaml
SocketCAN/demos/EchoDevice/: CMakeLists.txt  SilKitDemoCanEchoDevice.cpp
SocketCAN/demos/databases/: CAN_DB.dbc
SocketCAN/demos/shell_scripts/: OpenVCan_can0.sh  SendSocketCANFrames.sh  send_CAN_frames.sh  setup_vCAN_device.sh  setup_vCAN_start_adapter_send_CAN_frames.sh  setup_vCAN_start_adapter_send_frames.sh  setup_vcan_device.sh  setup_vcan_start_adapter_send_CAN_frames.sh
SocketCAN/demos/shell_scripts/Cuttlefish/: prepare_cuttlefish_vcan_device.sh  send_CAN_frames.sh
SocketCAN/demos/shell_scripts/tasks_scripts/: build_adapter.sh  prepare_run_silkit.sh  run_EchoDevice.sh  stop_processes.sh  traffic_monitoring.sh
SocketCAN/demos/tests/: test_CANFD_EchoDevice.can  test_CANFD_EchoDevice.vtesttree.yaml  test_CANFD_EchoDevice.vtestunit.yaml  test_CAN_EchoDevice.can  test_CAN_EchoDevice.vtesttree.yaml  test_CAN_EchoDevice.vtestunit.yaml
SocketCAN/demos/vTESTstudio/: vTESTstudio_Project.vtsoproj
SocketCAN/demos/vTESTstudio/TestUnit/: TestTable.vtt  TestUnit.vtuexe  test_CAN_EchoDevice.can
SocketCAN/demos/vTestStudio/: vTESTstudio_Project.vtsoproj
SocketCAN/demos/vTestStudio/TestUnit/: TestUnit.vtuexe  test_CAN_EchoDevice.can
docs/man/: CMakeLists.txt  sil-kit-adapter-vcan.1
